--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -11,7 +11,7 @@
         android:layout_width="208dp"
         android:layout_height="68dp"
         android:layout_marginStart="100dp"
-        android:text="Register"
+        android:text="@string/registration"
         android:background="@drawable/button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:inputType="textPassword"
-            android:hint="Password" />
+            android:hint="@string/passwordAuth" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -57,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:hint="Login" />
+            android:hint="@string/logAuth" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:inputType="textPassword"
-            android:hint="Confirm password" />
+            android:hint="@string/confirmPasswordReg" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
